@@ -4,16 +4,13 @@ SOURCE=.
 BUILD=$(SOURCE)/build
 SOURCESLIDES=$(SOURCE)/slideshows
 
-all: clean build_ubuntu build_kubuntu build_xubuntu build_ubuntu-netbook build_lubuntu translations
+all: clean build_ubuntu build_kubuntu build_xubuntu build_lubuntu translations
 
 build_init:
 	mkdir -p $(BUILD)
 
 build_ubuntu: build_init
 	cp -rL $(SOURCESLIDES)/ubuntu $(BUILD)
-
-build_ubuntu-netbook: build_init
-	cp -rL $(SOURCESLIDES)/ubuntu-netbook $(BUILD)
 
 build_kubuntu: build_init
 	cp -rL $(SOURCESLIDES)/kubuntu $(BUILD)
@@ -26,7 +23,6 @@ build_lubuntu: build_init
 
 translations:
 	./generate-local-slides.sh ubuntu
-	./generate-local-slides.sh ubuntu-netbook
 	./generate-local-slides.sh kubuntu
 	./generate-local-slides.sh xubuntu
 	./generate-local-slides.sh lubuntu
