@@ -1,32 +1,0 @@
-<!DOCTYPE html>
-
-<html lang="en">
-
-<head>
-	<title>ubiquity-slideshow-ubuntu</title>
-	
-	<link href="link/general.css" rel="stylesheet" type="text/css" />
-	
-	<base target="_blank" />
-	
-	<script type="text/javascript" src="link-core/jquery.js"></script>
-	<script type="text/javascript" src="link-core/jquery.cycle.all.js"></script>
-	<script type="text/javascript" src="directory.js"></script>
-	<script type="text/javascript" src="link-core/slideshow.js"></script>
-</head>
-
-<body>
-
-<div id="slideshow">
-	<div><a href="welcome.html"></a></div>
-</div>
-
-<div id="controls">
-<a class="control-arrow" id="prev-slide"></a>
-<a class="control-arrow" id="next-slide"></a>
-<input type="hidden" id="current-slide" />
-</div>
-
-</body>
-
-</html>
